k8s/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-admin
  labels:
    app: portfolio-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-admin
  template:
    metadata:
      labels:
        app: portfolio-admin
    spec:
      containers:
        - name: portfolio-admin
          image: physcocode/portfolioadmin:v1.11
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            # You must specify requests for CPU to autoscale
            # based on CPU utilization
            requests:
              cpu: "250m"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-website
  labels:
    app: portfolio-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-website
  template:
    metadata:
      labels:
        app: portfolio-website
    spec:
      containers:
        - name: portfolio-website
          image: physcocode/portfoliowebsite:v1.12
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            # You must specify requests for CPU to autoscale
            # based on CPU utilization
            requests:
              cpu: "250m"
