k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portfoliowebsite
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/server-alias: www.iportfolio.me
    nginx.ingress.kubernetes.io/use-regex: "true"    
spec:
  rules:
  - host: iportfolio.me
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: portfolioadmin-svc
            port:
              number: 80
  - host: "*.iportfolio.me"
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: portfoliowebsite-svc
            port:
              number: 80
